<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/background_screen_userapp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/kustlogo"
        android:layout_margin="15dp"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_circular"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/KUST_TITLE"
        android:textSize="25sp"
        android:layout_margin="10dp"
        app:fontFamily="@font/centurygothic"
        android:textStyle="bold"
        android:textColor="@color/whiteColor"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fontFamily="@font/centurygothic"
        android:text="@string/DepartmentNameTitle"
        android:textColor="@color/whiteColor"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="120dp"
        android:background="@drawable/bottom_textview"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteColor"
            android:fontFamily="@font/centurygothic"
            android:textSize="17dp"
            android:text="@string/welcometoapp"
            android:layout_gravity="center"
            android:gravity="center"
            />

    </LinearLayout>

</LinearLayout>